--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ dependencies:
     sdk: flutter
 
 
+  generic_bloc_provider: ^1.0.9
+  firebase_auth:
+  google_sign_in:
+  firebase_storage: ^10.2.3
+  cloud_firestore: ^3.1.4
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
