--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   google_sign_in:
   firebase_storage: ^10.2.3
   cloud_firestore: ^3.1.4
+  firebase_core:
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
